--- a/app/src/main/res/layout/activity_logins.xml
+++ b/app/src/main/res/layout/activity_logins.xml
@@ -1,9 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Logins">
+    tools:context=".Logins"
+    android:background="@color/background"
+    android:gravity="center"
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingHorizontal="@dimen/body2">
+<!--        tạo text view hiển thị từ đăng nhập-->
+        <TextView
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Đăng nhập"
+            android:textColor="@color/text"
+            android:textSize="@dimen/heading1"
+            android:fontFamily="@font/opensans_bold"/>
+<!--        Tạo form nhập dữ liệu cho tài khoản-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:hintEnabled="false"
+            android:layout_marginTop="@dimen/body1">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/login_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_input"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/text"
+                android:ems="10"
+                android:drawableStart="@drawable/account_circle"
+                android:paddingHorizontal="@dimen/body3"
+                android:drawablePadding="@dimen/body3"
+                android:paddingVertical="@dimen/heading3"
+                android:hint="Tài khoản"
+                android:fontFamily="@font/opensans"
+                android:textColorHint="@color/text"
+                android:inputType="text"
+                android:textSize="@dimen/body1"
+                android:layout_marginTop="10dp"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--        tạo form nhập dữ liệu mật khẩu-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:hintEnabled="false"
+            app:passwordToggleEnabled="true"
+            android:layout_marginTop="@dimen/body1">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/login_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_input"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/text"
+                android:ems="10"
+                android:paddingHorizontal="@dimen/body3"
+                android:drawablePadding="@dimen/body3"
+                android:paddingVertical="@dimen/body1"
+                android:drawableStart="@drawable/lock_open"
+                android:hint="Mật khẩu"
+                android:fontFamily="@font/opensans"
+                android:textColorHint="@color/text"
+                android:inputType="textPassword"
+                android:textSize="@dimen/body1"
+                android:layout_marginTop="10dp"/>
+        </com.google.android.material.textfield.TextInputLayout>
+<!--        Tạo button để click chuyển giao diện và xác minh tài khoản-->
+        <Button
+            android:id="@+id/btnlogin"
+            android:layout_marginTop="@dimen/body1"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:text="Đăng nhập"
+            android:textSize="@dimen/body1"
+            android:paddingVertical="@dimen/body1"
+            android:fontFamily="@font/opensans_bold"
+            android:background="@drawable/custom_button"
+            app:backgroundTint = "@null"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+</LinearLayout>
