--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,14 @@
         android:layout_height="wrap_content"
         android:text="Hello, wellcome to my app"/>
 
+    <Button
+        android:id="@+id/btnstart"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="Bắt đầu đến với thư viện"
+        android:textSize="@dimen/body2"
+        android:layout_marginTop="@dimen/heading1"
+        android:background="@drawable/custom_button"
+        app:backgroundTint = "@null"/>
+
 </LinearLayout>
