--- a/app/src/main/res/layout/activity_sqlserver_java.xml
+++ b/app/src/main/res/layout/activity_sqlserver_java.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".SQLserverJAVA">
 
+    <Button
+        android:id="@+id/btnconnect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="320dp"
+        android:drawable="@drawable/custom_button"
+        android:text="Connect SQL Server"
+        app:backgroundTint="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
