--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -7,13 +7,21 @@
     android:orientation="vertical"
     android:background="@color/background"
     tools:context=".ThanhToanActivity">
-
+<!-- Code tạo giao diện nhập thanh toán-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/body1"
-        android:textAlignment="center">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/body3">
+        <ImageButton
+            android:id="@+id/btnback"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="#00000000"
+            android:paddingLeft="@dimen/body1"
+            android:paddingTop="@dimen/body4"
+            android:contentDescription="@string/app_name"
+            app:srcCompat="@drawable/chevron_left"/>
 
         <TextView
             android:id="@+id/textView2"
@@ -22,8 +30,26 @@
             android:fontFamily="@font/opensans_bold"
             android:text="THANH TOÁN"
             android:textAlignment="center"
+            android:layout_gravity="center"
             android:textColor="@color/text"
             android:textSize="@dimen/heading3" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingHorizontal="@dimen/body1"
+        android:textAlignment="center">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingHorizontal="@dimen/body1"
+                android:textAlignment="center">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -80,7 +106,7 @@
                 android:background="@drawable/background_input"
                 android:ems="10"
                 android:hint="Mã mượn sách"
-                android:inputType="number"
+                android:inputType="text"
                 android:maxLength="11"
                 android:textColorHint="@color/text"
                 android:textSize="@dimen/body2" />
@@ -169,7 +195,7 @@
                 android:textSize="@dimen/body2" />
         </com.google.android.material.textfield.TextInputLayout>
         <Button
-            android:id="@+id/btnnhapts"
+            android:id="@+id/btnnhaptt"
             android:layout_width="155dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -179,8 +205,8 @@
             android:textAlignment="center"
             android:textColorHint="#FFFFFF"
             android:textSize="25dp"
-            app:backgroundTint="@null" />
-
+            app:backgroundTint="@null"/>
+             </LinearLayout>
+            </ScrollView>
     </LinearLayout>
-
 </LinearLayout>
